agrego bootstrap, termino index.hmtl

--- a/cart.html
+++ b/cart.html
@@ -3,7 +3,7 @@
         <head>
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>Mega Smart | Home</title>
+            <title>Mega Smart | Cart</title>
             <!-- FONT -->
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,13 +30,8 @@
                 </nav>
             </header>
             <main> 
-                <!-- HERO -->
-                <section class="hero-banner">
-                    <h2 class="hero-text">Think</h2>
-                    <h2 class="hero-text">Smart</h2>
-                </section>
-                <!-- END HERO -->
-                <div id="productContainer" class="product-container"></div>
+            
+
             </main>
             <footer>    
                 <div class="footer-sponsor">
