agrego imagenes, js de product y agrego card en el dom

--- a/index.html
+++ b/index.html
@@ -48,12 +48,15 @@
                     </div>
                 </div>
                 <div class="footer-social-media">
-                    <a href="https://www.instagram.com/" target="_blank"><img src="./img/instagram.png" alt="Icon Instagram"></a>
-                    <a href="https://www.facebook.com/" target="_blank"><img src="./img/facebook.png" alt="Icon Facebook"></a>
-                    <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank"><img src="./img/email.png" alt="Icon Email"></a>
+                    <h5>Social Media</h5>
+                    <div>
+                         <a href="https://www.instagram.com/" target="_blank"><img src="./img/instagram.png" alt="Icon Instagram"></a>
+                         <a href="https://www.facebook.com/" target="_blank"><img src="./img/facebook.png" alt="Icon Facebook"></a>
+                         <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank"><img src="./img/email.png" alt="Icon Email"></a>
+                    </div>
                 </div>
                 <script src="./js/bootstrap.min.js"></script>
-                <script src="./js/cart.js"></script>
+                <script src="./js/products.js"></script>
             </footer>
         </body>
     </html>
