agrego js de cart

--- a/cart.html
+++ b/cart.html
@@ -30,7 +30,9 @@
                 </nav>
             </header>
             <main> 
-            
+                <div id="cartContainer"></div>
+                <h2>your cart</h2>
+                <button id="emptyCartBtn">Empty Cart</button>
 
             </main>
             <footer>    
@@ -47,8 +49,8 @@
                     <a href="https://www.facebook.com/" target="_blank"><img src="./img/facebook.png" alt="Icon Facebook"></a>
                     <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank"><img src="./img/email.png" alt="Icon Email"></a>
                 </div>
-                <script src="./js/bootstrap.min.js"></script>
-                <script src="./js/cart.js"></script>
             </footer>
+            <script src="./js/bootstrap.min.js"></script>
+            <script src="./js/cart.js"></script>
         </body>
     </html>
