--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
                          <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank"><img src="./img/email.png" alt="Icon Email"></a>
                     </div>
                 </div>
-                <script src="./js/bootstrap.min.js"></script>
-                <script src="./js/products.js"></script>
             </footer>
+            <script src="./js/bootstrap.min.js"></script>
+            <script src="./js/products.js"></script>
+            <script src="./js/cart.js"></script>
         </body>
     </html>
