--- a/cart.html
+++ b/cart.html
@@ -12,6 +12,7 @@
             <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
             <!-- CSS -->
             <link rel="stylesheet" href="./css/bootstrap.min.css">
+            <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
             <link rel="stylesheet" href="./css/style.css">
         </head>
         <body>
@@ -59,6 +60,7 @@
                 </div>
             </footer>
             <script src="./js/bootstrap.min.js"></script>
+            <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
             <script src="./js/cart.js"></script>
         </body>
     </html>
